--- a/podcast.ipynb
+++ b/podcast.ipynb
@@ -553,12 +553,12 @@
         "    SCOPES = ['https://www.googleapis.com/auth/youtube.upload']\n",
         "\n",
         "    creds_data = json.loads(\"\"\"{\n",
-        "  \"access_token\": \"ya29.a0AeXRPp7rm_o2CX5AdZ3YbMf9NoKMAiRCd9Kx18N8BaOxx55mOywt9YZHztU2K9dTjij9uKHJfeVe_nlf51sbZWO251c9u7NFpoI2DF8katdhpKgEtVz0KMFMPhDx44s8SVWFS38yjSc5u1ORGVqUvvICguroynP2rLXZfXDdaCgYKAYISARMSFQHGX2MiGArfw5B1bG9CEapx0r05pQ0175\",\n",
+        "  \"access_token\": \"access_token\",\n",
         "  \"refresh_token_expires_in\": 604799,\n",
         "  \"expires_in\": 3599,\n",
         "  \"token_type\": \"Bearer\",\n",
         "  \"scope\": \"https://www.googleapis.com/auth/youtube.channel-memberships.creator https://www.googleapis.com/auth/youtube.readonly https://www.googleapis.com/auth/youtube.upload https://www.googleapis.com/auth/youtube https://www.googleapis.com/auth/youtube.force-ssl https://www.googleapis.com/auth/youtubepartner https://www.googleapis.com/auth/youtubepartner-channel-audit\",\n",
-        "  \"refresh_token\": \"1//04y_ssvJXtaSqCgYIARAAGAQSNwF-L9IruwQKG9HCvaxSb05XxVd-CzGJ0lO-ZJPFJ4mLo30hCg8AINkPSb_KVYL2OvRDYzQ6MBk\"\n",
+        "  \"refresh_token\": \"refresh token\"\n",
         "}\"\"\")\n",
         "    print(creds_data)\n",
         "    creds = Credentials(\n",
